# converge-governance-hackathon

./: .env.example  .geminiignore  .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GEMINI.md  HELM_REFACTOR_PLAN.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  MILESTONES.md  README.md  RELEASE.md  STACK_EXTRACTION_HELM.md  SUPPORT.md
.claude/skills/audit/: SKILL.md
.claude/skills/branch/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/done/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/feedback/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/focus/: SKILL.md
.claude/skills/help/: SKILL.md
.claude/skills/merge/: SKILL.md
.claude/skills/merge-cleanup/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/parallel/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/quality/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/sync/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/ticket/: SKILL.md
.claude/skills/wip/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  task.md
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
apps/desktop/public/demo/ai-provider-evaluation/fast-track/: 01-xyz-vendor-selection-process.md  02-ai-workload-profile.md  03-security-compliance-requirements.md  04-budget-and-token-forecast.csv  05-gateway-architecture-notes.md  06-executable-jtbd-and-converging-truth.md
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: config.rs  dd.rs  lib.rs  main.rs  today.rs
apps/desktop/src/lib/: AIProviderEvaluation.svelte  ConvergenceDemo.svelte  PHASE2_REPLAY_PLAN.md  ProviderSelector.svelte  replay-adapter.ts  spinner.ts  tauri.js  tauri.ts  types.ts
challenges/: 01-vendor-selection.md
crates/governance-app/: Cargo.toml
crates/governance-app/src/: lib.rs
crates/governance-kernel/: Cargo.toml
crates/governance-kernel/src/: lib.rs
crates/governance-kernel/src/types/: access.rs  mod.rs
crates/governance-server/: Cargo.toml
crates/governance-server/src/: experience.rs  http_api.rs  lib.rs  live_due_diligence.rs  llm_helpers.rs  main.rs  search_helpers.rs
crates/governance-server/src/truth_runtime/: access_control.rs  audit_vendor_decision.rs  authorize_vendor_commitment.rs  budget_approval.rs  common.rs  dynamic_due_diligence.rs  evaluate_vendor.rs  mod.rs  model_competition.rs  source_import.rs  vendor_selection.rs  vendor_selection_live.rs  vendor_selection_simple.rs
crates/governance-server/tests/: access_control_test.rs  budget_approval_test.rs  durable_adapter_system.rs  live_vendor_selection.rs
crates/governance-telemetry/: Cargo.toml
crates/governance-telemetry/src/: lib.rs
crates/governance-truths/: Cargo.toml
crates/governance-truths/src/: lib.rs
docs/: 01-vendor-selection.md  architecture.md  developers-handbook.md  kong-integration.md
examples/access-control/: README.md  access-control-policy.cedar  seed-users-and-resources.json
examples/audit-vendor-decision/: audit-vendor-decision.feature
examples/budget-approval/: README.md  budget-approval-policy.cedar  seed-requests.json
examples/dynamic-due-diligence/: README.md  dynamic-due-diligence.request.json
examples/policy-vendor-commitment/: README.md  commit-approved.request.json  commit-escalate.request.json  commit-reject.request.json  vendor-commitment-policy.cedar
examples/vendor-selection/: README-student-edition.md  README.md  budget-approval-policy.cedar  buyer-brief.md  competition-matrix.json  demo-ai-provider-mix.json  demo-ai-strategy-candidates.json  demo-ai-strategy-candidates.md  demo-ai-vendors.json  demo-competition-vendors.json  demo-source-pack.json  downstream-actions.md  evaluation-model.md  landscape-procurement-tools.json  seed-criteria.json  seed-vendors.json  static-facts.json  vendor-seed-simple.json  vendor-selection-policy-simple.cedar  vendor-selection-policy.cedar  vendor-selection.feature  vendor-selection.truths.json
experiments/: LOG.md
kb/: Home.md  LOG.md
kb/.obsidian/: workspace.json
kb/Architecture/: Axiom Truth Contract.md  Convergence Loop.md  Layers.md  Overview.md
kb/Converge/: Bevy Deep Dive.md  Building Blocks.md  Context Keys.md  Core Concepts.md  Crate Catalog.md  Desktop Naming.md  Domain Packs.md  Experience and Recall.md  Governed Artifacts.md  HITL Gates.md  Organism Blueprints.md  Organism Patterns.md  Threlte Visualization.md  Visualization Alternatives.md
kb/Development/: Build Your First Truth.md  Cedar Policies for Participants.md  Getting Started.md  Programming API Surfaces.md  Provider Configuration.md  Streaming.md  Template Handoff.md  Troubleshooting.md  Writing Agents.md  Writing Suggestors.md  Writing Truths.md
kb/Domain/: Agents.md  Key Types.md  Landscape.md  Truths.md  Vendor Selection.md
kb/Integrations/: External Services.md  Kong Admin API.md  Kong Chat Response.md  Kong Demo Story.md  Kong Gateway.md  MCP Tools.md  Web Search Demo Story.md  Why Kong.md
kb/Presentations/: Team Pitch - Governed Vendor Selection.md
kb/Workflow/: Daily Journey.md  Skills Reference.md  Working with Claude.md  Working with Codex.md  Working with Gemini.md
scripts/demo/: creative.sh  presentation.sh  today.sh  verify.sh
scripts/workflow/: focus.sh  status.sh
