[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
# Published stack crates
converge-core = "3.7.4"
converge-pack = "3.7.4"
converge-kernel = "3.7.4"
converge-model = "3.7.4"
converge-provider-api = "3.7.4"
converge-domain = "3.7.4"
converge-policy = "3.7.4"
converge-provider = { version = "3.7.4", default-features = false, features = ["anthropic", "gemini", "openai", "openrouter", "mistral", "brave", "tavily", "kong"] }

organism-pack = "1.4.0"
organism-runtime = "1.4.0"
organism-planning = "1.4.0"

axiom-truth = "0.7.0"

# Server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dotenv = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
