[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
# Published stack crates
converge-core = "3.7.5"
converge-pack = "3.7.5"
converge-kernel = "3.7.5"
converge-model = "3.7.5"
converge-provider-api = "3.7.5"
converge-domain = "3.7.5"
converge-policy = "3.7.5"
converge-provider = { version = "3.7.5", default-features = false, features = ["anthropic", "gemini", "openai", "openrouter", "mistral", "brave", "tavily", "kong"] }

organism-pack = "1.4.0"
organism-runtime = "1.4.0"
organism-planning = "1.4.0"

axiom-truth = "0.7.0"

# Server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dotenv = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"

# Track unreleased platform head (Converge 3.7.5, Axiom 0.7.0).
# Remove this block once the corresponding versions are published to crates.io.
[patch.crates-io]
converge-analytics    = { package = "prism",          path = "../../extensions/prism/crates/prism" }
converge-client       = { path = "../../work/converge/crates/client" }
converge-core         = { path = "../../work/converge/crates/core" }
converge-domain       = { package = "atelier-domain", path = "../../atelier/crates/atelier-domain" }
converge-experience   = { path = "../../work/converge/crates/experience" }
converge-kernel       = { path = "../../work/converge/crates/kernel" }
converge-knowledge    = { package = "mnemos",         path = "../../extensions/mnemos/crates/mnemos" }
converge-model        = { path = "../../work/converge/crates/model" }
converge-optimization = { path = "../../work/converge/crates/optimization" }
converge-pack         = { path = "../../work/converge/crates/pack" }
converge-policy       = { package = "arbiter",        path = "../../extensions/arbiter/crates/arbiter" }
converge-protocol     = { path = "../../work/converge/crates/protocol" }
converge-provider     = { path = "../../work/converge/crates/provider" }
converge-provider-api = { path = "../../work/converge/crates/provider-api" }
converge-runtime      = { path = "../../work/converge/crates/runtime" }
converge-storage      = { path = "../../work/converge/crates/storage" }
organism-pack         = { path = "../../work/organism/crates/pack" }
organism-runtime      = { path = "../../work/organism/crates/runtime" }
organism-planning     = { path = "../../work/organism/crates/planning" }
organism-intent       = { path = "../../work/organism/crates/intent" }
axiom-truth           = { path = "../../work/axiom" }
