[package]
name = "governance-app"
version = "0.1.0"
edition.workspace = true

[dependencies]
governance-kernel = { path = "../governance-kernel" }
governance-truths = { path = "../governance-truths" }
governance-server = { path = "../governance-server" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
