[package]
name = "governance-server"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "governance-server"
path = "src/main.rs"

[dependencies]
governance-kernel = { path = "../governance-kernel" }
governance-truths = { path = "../governance-truths" }
converge-core = { workspace = true }
converge-domain = { workspace = true }
converge-policy = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
