[package]
name = "governance-server"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "governance-server"
path = "src/main.rs"

[[bin]]
name = "model-competition"
path = "src/bin/model_competition.rs"

[[bin]]
name = "vendor-selection-demo"
path = "src/bin/vendor_selection_demo.rs"

[dependencies]
governance-kernel = { path = "../governance-kernel" }
governance-truths = { path = "../governance-truths" }
governance-telemetry = { path = "../governance-telemetry" }
converge-domain = { workspace = true }
converge-policy = { workspace = true }
converge-pack = { workspace = true }
converge-kernel = { workspace = true }
converge-model = { workspace = true }
converge-provider-api = { workspace = true }
converge-provider = { workspace = true }
organism-pack = { workspace = true }
organism-runtime = { workspace = true }
organism-planning = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenv = { workspace = true }

[features]
live-tests = []

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
