[package]
name = "governance-truths"
version = "0.1.0"
edition.workspace = true

[dependencies]
converge-kernel = { workspace = true }
converge-model = { workspace = true }
converge-provider-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
