[package]
name = "governance-desktop"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
name = "governance_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
governance-telemetry = { path = "../../../crates/governance-telemetry" }
converge-provider-api = { path = "../../../local/converge/crates/provider-api" }
converge-provider = { path = "../../../local/converge/crates/provider", default-features = false, features = ["anthropic", "gemini", "openai", "openrouter", "mistral", "kong"] }
axiom-truth = { path = "../../../../../work/axiom" }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
